update configs according to new changes in eogrow

--- a/GEM/config_files/continuous_monitoring/global_config.json
+++ b/GEM/config_files/continuous_monitoring/global_config.json
@@ -1,7 +1,7 @@
 {
   "storage": {
     "manager": "eogrow.core.storage.StorageManager",
-    "project_folder": "<your s3 bucket or local path>",
+    "project_folder": "/Users/mlubej/work/projects/sh-project/eo-grow-examples/GEM/project",
     "structure": {
       "catalog": "catalog",
       "eopatches": "eopatches",
@@ -10,12 +10,13 @@
   },
   "area": {
     "manager": "eogrow.core.area.UtmZoneAreaManager",
-    "area_filename": "niger_aoi.geojson",
-    "patch_size_x": 30000,
-    "patch_size_y": 30000
-  },
-  "eopatch": {
-    "manager": "eogrow.core.eopatch.EOPatchManager"
+    "area": {
+      "filename": "niger_aoi.geojson"
+    },
+    "patch": {
+      "size_x": 30000,
+      "size_y": 30000
+    }
   },
   "logging": {
     "manager": "eogrow.core.logging.LoggingManager",
