--- a/GEM/pyproject.toml
+++ b/GEM/pyproject.toml
@@ -9,6 +9,27 @@ known_absolute = "gem_example"
 sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","ABSOLUTE","LOCALFOLDER"]
 line_length = 120
 
+[tool.mypy]
+follow_imports = "normal"
+ignore_missing_imports = true
+show_column_numbers = true
+show_error_codes = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+# disallow_untyped_defs = true
+# disallow_untyped_decorators = true
+warn_unreachable = true
+strict_equality = true
+pretty = true
+plugins = [
+    "pydantic.mypy"
+]
+
+[tool.pydantic-mypy]
+# init_forbid_extra = true  # cant be used unless we change managers
+init_typed = true
+
 [tool.nbqa.addopts]
 flake8 = [
     "--extend-ignore=E402"
