--- a/GEM/config_files/large_scale_processing/global_config.json
+++ b/GEM/config_files/large_scale_processing/global_config.json
@@ -19,14 +19,13 @@
   },
   "area": {
     "manager": "eogrow.core.area.BatchAreaManager",
-    "area_filename": "aoi_region.geojson",
+    "area": {
+      "filename": "aoi_region.geojson"
+    },
     "tiling_grid_id": 2,
     "resolution": 120,
     "tile_buffer_x": 10,
     "tile_buffer_y": 10
-  },
-  "eopatch": {
-    "manager": "eogrow.core.eopatch.BatchTileManager"
   },
   "logging": {
     "manager": "eogrow.core.logging.LoggingManager",
