--- a/.github/workflows/ci_action.yml
+++ b/.github/workflows/ci_action.yml
@@ -1,11 +1,13 @@
 name: build
 
 on:
+  pull_request:
   push:
+    branches:
+      - "master"
 
 jobs:
-
-  check-code-black-isort:
+  check-pre-commit-hooks:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
@@ -19,13 +21,10 @@ jobs:
           python-version: "3.8"
           architecture: x64
 
-      - name: Prepare linters
-        run: pip install black[jupyter] isort nbqa
-
-      - name: Check code compliance with black
-        run: black . --check --diff
-
-      - name: Check code compliance with isort
+      - name: Prepare pre-commit validators
         run: |
-          isort . --check --diff
-          nbqa isort . --nbqa-diff
+          pip install pre-commit
+          pre-commit install
+
+      - name: Check code compliance with pre-commit validators
+        run: pre-commit run --all-files
