--- a/GEM/config_files/large_scale_processing/global_config.json
+++ b/GEM/config_files/large_scale_processing/global_config.json
@@ -4,8 +4,7 @@
   },
   "storage": {
     "manager": "eogrow.core.storage.StorageManager",
-    "project_folder": "s3://<your bucket>", // the bucket needs to be properly configured for Sentinel Hub Batch API
-    "aws_profile": "cdse-gem-bucket",
+    "project_folder": "s3://<your-bucket>", // the bucket needs to be properly configured for Sentinel Hub Batch API
     "filesystem_kwargs": {"endpoint_url": "https://s3.waw3-1.cloudferro.com"},
     "structure": {
       "data": "data/${var:year}",  // uses the 2020 defined in "variables"
@@ -22,7 +21,7 @@
   "area": {
     "manager": "eogrow.core.area.BatchAreaManager",
     "area": {
-      "filename": "demo-aoi.geojson"
+      "filename": "aoi_region.geojson"
     },
     "tiling_grid_id": 2,
     "resolution": 120,
